<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/llInstruction"
        style="@style/Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_main"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_main" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="100"
        android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llInstruction" />

    <LinearLayout
        android:id="@+id/llStats"
        style="@style/Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <TextView
            android:id="@+id/tvStatsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_stats"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvStatsData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_stats"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llStats">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_result"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:id="@+id/llResultData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivComputer"
                    android:layout_width="@dimen/size_image"
                    android:layout_height="@dimen/size_image"
                    android:layout_gravity="center"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tvComputer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_view"
                    android:text="@string/label_computer"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvVs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:padding="@dimen/padding_vs"
                android:text="@string/label_vs"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivPlayer"
                    android:layout_width="@dimen/size_image"
                    android:layout_height="@dimen/size_image"
                    android:layout_gravity="center"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tvPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_view"
                    android:text="@string/label_player"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/ibRock"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_image"
        android:layout_margin="@dimen/margin_image_button"
        android:backgroundTint="@color/colorAccent"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibPaper"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rock" />

    <ImageButton
        android:id="@+id/ibPaper"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_image"
        android:layout_margin="@dimen/margin_image_button"
        android:backgroundTint="@color/colorAccent"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibScissors"
        app:layout_constraintStart_toEndOf="@+id/ibRock"
        app:srcCompat="@drawable/paper" />

    <ImageButton
        android:id="@+id/ibScissors"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_image"
        android:layout_margin="@dimen/margin_image_button"
        android:backgroundTint="@color/colorAccent"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibPaper"
        app:srcCompat="@drawable/scissors" />

</androidx.constraintlayout.widget.ConstraintLayout>